tree-sitter-clarity/test/corpus/statements.txt
=====================================
Public function definition
=====================================

(define-public (hello-world (name (string-ascii 32)))
  (let
    (
      (foo (+ 3 1))
      (bar u5)
      (user tx-sender)
    )
    (ok 1)
  )
)

---

(source
      (function_definition
        (public_function
        (function_signature
          (identifier)
          (function_parameter
            (identifier)
            (type_name
              (ascii_string_type))))
        (let_statement
          (let_variable_definition
            (identifier)
            (common_statement
              (arithmetic_function)
              (int_lit)
              (int_lit)))
          (let_variable_definition
            (identifier)
            (uint_lit))
          (let_variable_definition
            (identifier)
            (global))
          (response_lit
            (int_lit))))))

=====================================
Private function definition
=====================================

(define-private (hello-world (name (string-ascii 32)))
  (let
    (
      (foo (+ 3 1))
      (bar u5)
      (user tx-sender)
    )
    (ok 1)
  )
)

---

(source
      (function_definition
        (private_function
        (function_signature
          (identifier)
          (function_parameter
            (identifier)
            (type_name
              (ascii_string_type))))
        (let_statement
          (let_variable_definition
            (identifier)
            (common_statement
              (arithmetic_function)
              (int_lit)
              (int_lit)))
          (let_variable_definition
            (identifier)
            (uint_lit))
          (let_variable_definition
            (identifier)
            (global))
          (response_lit
            (int_lit))))))

=====================================
Trait definition
=====================================

;; mainnet principal: 'M0R8C3RD1EHAP2A37ERSSSZSWCS9T2GY5FGXNALC.sip-010-trait

(define-trait sip-010-trait
  (
    ;; Transfer from the caller to a new principal
    (transfer (uint principal principal (optional (buff 34))) (response bool uint))
  )
)

---

(source
      (comment)
      (trait_definition
        (identifier)
        (comment)
        (function_signature_for_trait
          (identifier)
          (type_name)
          (type_name)
          (type_name)
          (type_name
            (optional_type
              (type_name
                (buffer_type))))
          (type_name
            (response_type
              (type_name))))))
